k8s/mshrm-studio-auth-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-api-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  ingressClassName: auth-ingress
  rules:
    - host: api.mshrm.studio
      http:
        paths:
        - path: /auth
          pathType: Prefix
          backend:
            service:
              name: mshrm-studio-auth-api
              port:
                number: 30251
